# KinectLib

./: CMakeLists.txt  calibrateOpenCV.cpp  calibrateOpenCV.h  kinectException.cpp  kinectException.h  kinectInterface.cpp  kinectInterface.h  viewerOpenCV.cpp  viewerOpenCV.h
